<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".subreddit.RibbonFragment">


    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="2"
        android:background="@drawable/ribbon_news"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/subreddits"
            style="@style/Widget.MaterialComponents.Button.BottomStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttom_sub_off"
            android:gravity="center"
            android:text="@string/Subreddits"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/comments"
            style="@style/Widget.MaterialComponents.Button.BottomStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttom_sub_off"
            android:gravity="center"
            android:text="@string/сomments"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        android:background="@drawable/ribbon_news"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/LinearLayout"
        app:layout_constraintStart_toStartOf="@+id/LinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout">

        <Button
            android:id="@+id/all"
            style="@style/Widget.MaterialComponents.Button.BottomStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/buttom_sub_off"
            android:gravity="center"
            android:text="@string/all"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/Saved"
            style="@style/Widget.MaterialComponents.Button.BottomStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/buttom_sub_off"
            android:gravity="center"
            android:text="@string/saved"
            android:textSize="16sp" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout2">

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imageList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                tools:itemCount="3"
                tools:listitem="@layout/my_item_ribbon" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>