<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/ribbon_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="60dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name_profile"
            style="@style/profile_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <TextView
            android:id="@+id/profile_account"
            style="@style/profile_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/name_profile"
            app:layout_constraintTop_toBottomOf="@+id/name_profile" />

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/email_icon"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/profile_account"
            app:layout_constraintTop_toBottomOf="@+id/profile_account" />

        <TextView
            android:id="@+id/message"
            style="@style/name_profile_ribbon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/message"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/email_icon"
            app:layout_constraintStart_toEndOf="@+id/email_icon"
            app:layout_constraintTop_toTopOf="@+id/email_icon" />

        <ImageView
            android:id="@+id/comments_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/comments"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/email_icon"
            app:layout_constraintTop_toBottomOf="@+id/email_icon" />

        <TextView
            android:id="@+id/number_comments"
            style="@style/name_profile_ribbon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/comments_icon"
            app:layout_constraintStart_toEndOf="@+id/comments_icon"
            app:layout_constraintTop_toTopOf="@+id/comments_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/bottom_in_friends"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/bottom_check_in_friends"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/text_bottom_friends"
            style="@style/text_toolBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/subscribe"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:src="@drawable/check_icon_freinds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_next_news"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/bottom_check_in_friends"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout">

        <TextView
            style="@style/text_toolBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/see_all"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:src="@drawable/next" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottom_in_friends"
        app:layout_constraintStart_toStartOf="@+id/bottom_in_friends"
        app:layout_constraintTop_toBottomOf="@+id/bottom_in_friends">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_news_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/my_item_subreddit_info" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>